EventsAlumni/force-app/main/default/objects/Events_Sessions_Enrollment__c/Events_Sessions_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Events &amp; Sessions - Enrollment</label>
    <nameField>
        <displayFormat>PO# {00000000}</displayFormat>
        <label>Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events &amp; Sessions - Enrollment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>