EventsAlumni/force-app/main/default/objects/Events_Sessions_Enrollment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Event_Session_Account_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>