EventsAlumni/force-app/main/default/objects/Events_Sessions_Enrollment__c/fields/Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking ID</label>
    <referenceTo>Event_Booking__c</referenceTo>
    <relationshipName>Event_Session_Account_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>