EventsAlumni/force-app/main/default/objects/Events_Sessions_Enrollment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Event_Session_Account_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>