EventsAlumni/force-app/main/default/objects/Events_Sessions_Enrollment__c/fields/Schedule_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Sessions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule/Sessions</label>
    <referenceTo>Schedule_Sessions__c</referenceTo>
    <relationshipName>Event_Session_Account_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>