EventsAlumni/force-app/main/default/objects/Events_Sessions_Enrollment__c/fields/Speaker_Image__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Image__c</fullName>
    <label>Speaker Image</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>