EventsAlumni/force-app/main/default/objects/Events_Sessions_Enrollment__c/recordTypes/Event_Host_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Event_Host_Enrollment</fullName>
    <active>true</active>
    <label>Event Host Enrollment</label>
</RecordType>