EventsAlumni/force-app/main/default/objects/Events_Sessions_Enrollment__c/recordTypes/Session_Host_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Session_Host_Enrollment</fullName>
    <active>true</active>
    <label>Session Host  Enrollment</label>
</RecordType>