EventsAlumni/force-app/main/default/objects/Events_Sessions_Enrollment__c/recordTypes/Speaker_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Speaker_Enrollment</fullName>
    <active>true</active>
    <label>Speaker Enrollment</label>
</RecordType>