EventsAlumni/force-app/main/default/objects/Events_Sessions_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Reference__c</columns>
    <columns>Schedule_Sessions__c</columns>
    <columns>Contact__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Is_Active__c</columns>
    <columns>Type__c</columns>
    <columns>Booking_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>